<resources>
    <string name="app_name">Auvergne Webcams</string>

    <plurals name="nb_cameras_format">
        <item quantity="one">%d webcam</item>
        <item quantity="other">%d webcams</item>
    </plurals>

    <string name="splash_loading_cameras">Chargement des webcams</string>

    <!-- Date/Time Format -->
    <string name="date_full_format">"dd.MM.yy - HH'h'mm"</string>

    <!-- URL -->
    <string name="url_dev" translatable="false">https://raw.githubusercontent.com/Drusy/auvergne-webcams-ios/master/</string>
    <string name="url_prod" translatable="false">https://raw.githubusercontent.com/Drusy/auvergne-webcams-ios/master/</string>

    <!-- Weather -->
    <string name="url_weather">http://api.openweathermap.org/data/2.5/</string>
    <string name="app_weather_id">42d33e867dce175dc8e99755ad62b66f</string>
    <string name="weather_degree_celsius_format">%d°C</string>

    <!-- Generic -->
    <string name="generic_last_update_format">Mise à jour le %s</string>
    <string name="generic_not_up_to_date">La webcam ne semble pas fonctionnelle</string>
    <string name="generic_no_application_for_action">Aucune application installée sur votre appareil ne permet d\&#39;effectuer cette action</string>
    <string name="generic_no_email_app">Aucune application mail n\'est disponible sur cet appareil</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Annuler</string>
    <string name="generic_error">Une erreur est survenue</string>
    <string name="generic_network_error">Serveur inaccessible ou connexion réseau inexistante</string>
    <string name="generic_chooser">Choisir une application</string>

    <!-- Maps -->
    <string name="map_title">Carte</string>
    <string name="map_title_with_name">Carte - %s</string>
    <string name="map_style_menu">Style de carte</string>
    <string name="map_style_outside_menu">Extérieur</string>
    <string name="map_style_dark_menu">Vecteurs sombre</string>
    <string name="map_style_light_menu">Vecteurs clair</string>
    <string name="map_style_satellite_menu">Satellite</string>
    <string name="map_style_roads_menu">Routes</string>

    <!-- Settings -->
    <string name="settings_title">Paramètres</string>

    <string name="settings_global_title">Général</string>
    <string name="settings_global_refresh">Rafraîchissement automatique</string>
    <string name="settings_global_refresh_delay">Délai de rafraîchissement (minutes)</string>
    <string name="settings_global_quality_high">Haute qualité</string>
    <string name="settings_credits_title">Auvergne webcams</string>
    <string name="settings_credits_about">À propos</string>
    <string name="settings_credits_openium">Openium</string>
    <string name="settings_credits_pirates">Les Pirates</string>
    <string name="settings_send_new_webcam">Proposer une webcam</string>
    <string name="settings_credits_note">Noter l\'application</string>
    <string name="settings_version_format">Version %1$s (%2$s)</string>

    <string name="settings_about_title">Auvergne Webcams</string>
    <string name="settings_send_new_webcam_title">Nouvelle webcam</string>
    <string name="settings_send_new_webcam_message">Afin de proposer une webcam, veuillez vous munir du nom du lieu proposé ainsi que du lien vers la webcam en question.</string>
    <string name="settings_send_new_webcam_email_title">Proposition de webcam</string>
    <string name="settings_send_new_webcam_email_message">J\'ai connaissance d\'une webcam non disponible dans l\'application.\n\nNom du lieu:\nLien vers la webcam:\n</string>

    <!-- About -->
    <string name="url_openium">https://openium.fr</string>
    <string name="url_pirates">http://agencelespirates.com/</string>
    <string name="url_note_format">market://details?id=%s</string>

    <!-- Search -->
    <string name="search_hint">Rechercher une webcam</string>
    <string name="search_title">Rechercher</string>
    <plurals name="search_result_format">
        <item quantity="one">%d résultat pour</item>
        <item quantity="other">%d résultats pour</item>
    </plurals>
    <string name="search_result_none_format">Aucun résultat pour</string>

    <!-- Detail -->
    <string name="detail_refresh_menu">Mettre à jour</string>
    <string name="detail_share_menu">Partager</string>
    <string name="detail_save_menu">Télécharger</string>

    <string name="detail_signal_problem_subject">Signaler un problème - Webcam %s</string>
    <string name="detail_signal_problem_body_format">La webcam %s (%s) ne fonctionne pas.</string>
    <string name="detail_signal_problem_email">auvergnewebcams@openium.fr</string>
    <string name="error_no_permisson">Veuillez activer les permissions dans les paramètres de l\'application</string>
    <string name="detail_webcam_not_found">Impossible de charger le détail de cette caméra</string>

    <!-- Save -->
    <string name="save_success_title">Téléchargement terminé</string>
    <string name="save_progress_title">Téléchargement en cours</string>
    <string name="save_error_title">Téléchargement échoué</string>
    <string name="save_error_description">Une erreur est survenue pendant le téléchargement de la webcam %s</string>
    <string name="save_description">Webcam: %s</string>

    <!-- Detail Not Working -->
    <string name="detail_not_working_title">La webcam ne semble\npas fonctionelle</string>
    <string name="detail_not_working_text">Touchez l\'écran\npour signaler la caméra</string>

    <!-- Detail Not Connected -->
    <string name="detail_not_connected_title">Aucune connexion internet</string>
    <string name="detail_not_connected_text">Veuillez activer votre Wifi\nou vos données mobiles</string>

    <!-- Other -->
    <string name="favoris_section_title">Favoris</string>
    <string name="webcam_only_available_low_quality">La webcam n\'est disponible qu\'en basse qualité</string>
    <string name="loading_not_working_error">La webcam ne semble pas fonctionelle</string>

</resources>
