<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_map_style"
        android:icon="@drawable/ic_settings"
        android:title="@string/map_style_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_map_style_outside"
                android:title="@string/map_style_outside_menu" />

            <item
                android:id="@+id/menu_map_style_dark"
                android:title="@string/map_style_dark_menu" />

            <item
                android:id="@+id/menu_map_style_light"
                android:title="@string/map_style_light_menu" />

            <item
                android:id="@+id/menu_map_style_satellite"
                android:title="@string/map_style_satellite_menu" />

            <item
                android:id="@+id/menu_map_style_roads"
                android:title="@string/map_style_roads_menu" />
        </menu>
    </item>
</menu>