<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/constraintLayout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHeaderGeneral"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/settings_global_title"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_refresh_delay"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/settings_global_refresh"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:theme="@style/SwitchStyle" />

        <LinearLayout
            android:id="@+id/linearlayout_delay_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_delay_title"
                style="@style/font_proxima_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/settings_global_refresh_delay"
                android:textColor="@color/color_white_grey"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textview_delay_value"
                style="@style/font_proxima_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_arrow"
                android:gravity="center_vertical"
                tools:text="10"
                android:textColor="@color/color_white_grey"
                android:textSize="16sp" />

        </LinearLayout>


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_quality_webcams"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/settings_global_quality_high"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:theme="@style/SwitchStyle" />

        <TextView
            android:id="@+id/textview_header_aw"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/settings_credits_title"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textview_about"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/selector_arrow"
            android:gravity="center_vertical"
            android:text="@string/settings_credits_about"
            android:textColor="@color/color_white_grey"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textview_openium"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/selector_arrow"
            android:gravity="center_vertical"
            android:text="@string/settings_credits_openium"
            android:textColor="@color/color_white_grey"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textview_pirates"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/selector_arrow"
            android:gravity="center_vertical"
            android:text="@string/settings_credits_pirates"
            android:textColor="@color/color_white_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_note"
            style="@style/font_proxima_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/selector_arrow"
            android:gravity="center_vertical"
            android:text="@string/settings_credits_note"
            android:textColor="@color/color_white_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_version"
            style="@style/font_proxima_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="14sp"
            tools:text="Version 1.0 (1)" />

    </LinearLayout>

</ScrollView>